# efs_wmp

./: .gitignore  .gitmodules  CODEOWNERS  CODEX_CHECKLIST.md  README.md  README_STRUCTURE.md  TECHNICAL_OVERVIEW.md  codex.patch  implementation_plan.md  manifest.md  runbook_odoo_quality_checks.md  tasks.md  test_rg.ps1  tmp_hash.py
docs/: ROADMAP.md  (+7 more)
itad-core/: Dockerfile  README.md  alembic.ini  docker-compose.itad-core.yml  pyproject.toml
itad-core/alembic/: env.py
itad-core/alembic/versions/: 0001_init.sqlalchemy.py  0002_phase0_b.sqlalchemy.py  0003_phase0_c.sqlalchemy.py  0004_phase0_d.sqlalchemy.py  0005_phase0_d_receiving_constraints.sqlalchemy.py  0006_phase0_e_taxonomy_processing.sqlalchemy.py  0007_phase0_f_reconciliation_disputes.sqlalchemy.py  0008_phase0_g_evidence_custody.sqlalchemy.py  0009_phase0_h_inventory_outbound_downstream.sqlalchemy.py  0010_phase0_i_pickup_manifest_bridge.sqlalchemy.py  (+3 more)
itad-core/app/: main.py
itad-core/scripts/: migrate_categories_roms.py  seed_demo.py
itad-core/tests/: conftest.py  test_bi_datasets.py  test_bol.py  test_http_guard.py  test_material_types.py  test_phase0_f_reconciliation_disputes_data_layer.py  test_phase0_g_evidence_custody_data_layer.py  test_phase0_h_inventory_outbound_downstream_data_layer.py  test_phase0_i_pickup_manifest_bridge_data_layer.py  test_phase0_j_pricing_settlement_snapshot_data_layer.py  test_phase1_sor_invariants.py  test_phase1_vertical_slice_submit.py  test_pickup_manifest_submit_contract.py  test_processing_taxonomy.py  test_receiving.py  test_sor_guard_snapshot_exemptions.py
(+238 files in other folders)
