[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itad-core"
version = "0.1.0"
description = "ITAD Core backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0,<0.28",
    "httpcore>=0.16,<0.17",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."

[tool.alembic.env]
script_location = "alembic"
